cmake_minimum_required (VERSION 2.6)

project (tworzenie_watkow)

set(CMAKE_CXX_STANDARD 11)

add_executable(executables/thread_create_1 thread_create_1.cpp)
add_executable(executables/thread_create_2 thread_create_2.cpp)
add_executable(executables/thread_create_3 thread_create_3.cpp)
add_executable(executables/thread_create_4 thread_create_4.cpp)
add_executable(executables/thread_create_5 thread_create_5.cpp)
add_executable(executables/thread_create_6 thread_create_6.cpp)
add_executable(executables/thread_create_7 thread_create_7.cpp)
add_executable(executables/thread_create_8 thread_create_8.cpp)