cmake_minimum_required (VERSION 2.6)

project (tworzenie_watkow)

set(CMAKE_CXX_STANDARD 11)

add_executable(executables/thread_create_1 thread_create_1.cpp)
add_executable(executables/thread_create_2 thread_create_2.cpp)
add_executable(executables/thread_create_3 thread_create_3.cpp)
add_executable(executables/thread_create_4 thread_create_4.cpp)
add_executable(executables/thread_create_5 thread_create_5.cpp)
add_executable(executables/thread_create_6 thread_create_6.cpp)
add_executable(executables/thread_create_7 thread_create_7.cpp)
add_executable(executables/thread_create_8 thread_create_8.cpp)
add_executable(executables/thread_create_9 thread_create_9.cpp)
add_executable(executables/thread_create_10 thread_create_10.cpp)
add_executable(executables/thread_create_11 thread_create_11.cpp)
add_executable(executables/ex_1 ex_1.cpp)
add_executable(executables/ex_2 ex_2.cpp)